force-app/main/default/objects/Berechnung__c/Berechnung__c.object-meta.xml
<CustomObject>
    <label>Berechnung</label>
    <nameField>
        <label>Berechnung Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Berechnungen</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>