force-app/main/default/objects/Berechnung__c/fields/AFA__c.field-meta.xml
<CustomField>
    <fullName>AFA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AFA</label>
    <referenceTo>AFA__c</referenceTo>
    <relationshipLabel>Berechnungen</relationshipLabel>
    <relationshipName>BerechnungenAfa</relationshipName>
    <type>Lookup</type>
</CustomField>