force-app/main/default/objects/Berechnung__c/fields/AfaProJahrGesamt__c.field-meta.xml
<CustomField>
    <fullName>AfaProJahrGesamt__c</fullName>
    <label>AfA pro Jahr gesamt</label>
    <summarizedField>BerechnungsApartment__c.AfaProJahrInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>