force-app/main/default/objects/Berechnung__c/fields/AfaProMonatGesamt__c.field-meta.xml
<CustomField>
    <fullName>AfaProMonatGesamt__c</fullName>
    <formula>AfaProJahrGesamt__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AfA pro Monat gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>