force-app/main/default/objects/Berechnung__c/fields/AlternativenSparplanAnzeigen__c.field-meta.xml
<CustomField>
    <fullName>AlternativenSparplanAnzeigen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternativen Sparplan anzeigen?</label>
    <type>Checkbox</type>
</CustomField>