force-app/main/default/objects/Berechnung__c/fields/AnzahlFinanzierungsbausteine__c.field-meta.xml
<CustomField>
    <fullName>AnzahlFinanzierungsbausteine__c</fullName>
    <label>Anzahl Finanzierungsbausteine</label>
    <summaryForeignKey>Finanzierungsbaustein__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>