force-app/main/default/objects/Berechnung__c/fields/BauzeitzinsenAnzeigen__c.field-meta.xml
<CustomField>
    <fullName>BauzeitzinsenAnzeigen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bauzeitzinsen anzeigen</label>
    <type>Checkbox</type>
</CustomField>