force-app/main/default/objects/Berechnung__c/fields/BetrachtungszeitraumInJahren__c.field-meta.xml
<CustomField>
    <fullName>BetrachtungszeitraumInJahren__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Betrachtungszeitraum in Jahren</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>