force-app/main/default/objects/Berechnung__c/fields/Ehegattensplitting__c.field-meta.xml
<CustomField>
    <fullName>Ehegattensplitting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ehegattensplitting</label>
    <type>Checkbox</type>
</CustomField>