force-app/main/default/objects/Berechnung__c/fields/Eigenkapital__c.field-meta.xml
<CustomField>
    <fullName>Eigenkapital__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Eigenkapital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>