force-app/main/default/objects/Berechnung__c/fields/Eigenkapitalrendite__c.field-meta.xml
<CustomField>
    <fullName>Eigenkapitalrendite__c</fullName>
    <formula>(MieteProMonatGesamt__c -  InstandhaltungProMonatGesamt__c -  VerwaltungProMonatGesamt__c - ZinsProMonatGesamt__c - TilgungProMonatGesamt__c )*12/ Eigenkapital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eigenkapitalrendite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>