force-app/main/default/objects/Berechnung__c/fields/EigenkapitalrenditeAnzeigen__c.field-meta.xml
<CustomField>
    <fullName>EigenkapitalrenditeAnzeigen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eigenkapitalrendite anzeigen?</label>
    <type>Checkbox</type>
</CustomField>