force-app/main/default/objects/Berechnung__c/fields/ErbbauzinsProJahrGesamt__c.field-meta.xml
<CustomField>
    <fullName>ErbbauzinsProJahrGesamt__c</fullName>
    <formula>ErbbauzinsProMonatGesamt__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erbbauzins pro Jahr gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>