force-app/main/default/objects/Berechnung__c/fields/ErbbauzinsProMonatGesamt__c.field-meta.xml
<CustomField>
    <fullName>ErbbauzinsProMonatGesamt__c</fullName>
    <label>Erbbauzins pro Monat gesamt</label>
    <summarizedField>BerechnungsApartment__c.ErbbauzinsProMonatInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>