force-app/main/default/objects/Berechnung__c/fields/ErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>ErsterKaeufer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1. Käufer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Berechnungen (1. Käufer)</relationshipLabel>
    <relationshipName>Berechnungen1</relationshipName>
    <type>Lookup</type>
</CustomField>