force-app/main/default/objects/Berechnung__c/fields/Finanzierung__c.field-meta.xml
<CustomField>
    <fullName>Finanzierung__c</fullName>
    <label>Finanzierungsart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finanzierung</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
                <default>true</default>
                <label>Bar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>