force-app/main/default/objects/Berechnung__c/fields/Finanzierungsart__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsart__c</fullName>
    <formula>IF( Kreditsumme__c &gt; 0, &apos;Finanzierung&apos;, &apos;Bar&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finanzierungsart</label>
    <type>Text</type>
</CustomField>