force-app/main/default/objects/Berechnung__c/fields/Finanzierungsbeginn__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsbeginn__c</fullName>
    <label>Finanzierungsbeginn</label>
    <type>Date</type>
</CustomField>