force-app/main/default/objects/Berechnung__c/fields/Gesamtkosten__c.field-meta.xml
<CustomField>
    <fullName>Gesamtkosten__c</fullName>
    <formula>ListenpreisGesamt__c +  NotarUndGerichtskostenGesamt__c +  GrunderwerbsteuerGesamt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gesamtkosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>