force-app/main/default/objects/Berechnung__c/fields/GrunderwerbsteuerGesamt__c.field-meta.xml
<CustomField>
    <fullName>GrunderwerbsteuerGesamt__c</fullName>
    <label>Grunderwerbsteuer gesamt</label>
    <summarizedField>BerechnungsApartment__c.GrunderwerbsteuerInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>