force-app/main/default/objects/Berechnung__c/fields/Hauptimmobilie__c.field-meta.xml
<CustomField>
    <fullName>Hauptimmobilie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hauptimmobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Berechnungen</relationshipLabel>
    <relationshipName>Berechnungen</relationshipName>
    <type>Lookup</type>
</CustomField>