force-app/main/default/objects/Berechnung__c/fields/InstandhaltungProJahrGesamt__c.field-meta.xml
<CustomField>
    <fullName>InstandhaltungProJahrGesamt__c</fullName>
    <formula>InstandhaltungProMonatGesamt__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instandhaltung pro Jahr gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>