force-app/main/default/objects/Berechnung__c/fields/InstandhaltungProMonatGesamt__c.field-meta.xml
<CustomField>
    <fullName>InstandhaltungProMonatGesamt__c</fullName>
    <label>Instandhaltung pro Monat gesamt</label>
    <summarizedField>BerechnungsApartment__c.InstandhaltungProMonatInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>