force-app/main/default/objects/Berechnung__c/fields/Kirchensteuer__c.field-meta.xml
<CustomField>
    <fullName>Kirchensteuer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kirchensteuer</label>
    <type>Checkbox</type>
</CustomField>