force-app/main/default/objects/Berechnung__c/fields/Kreditsumme__c.field-meta.xml
<CustomField>
    <fullName>Kreditsumme__c</fullName>
    <label>Kreditsumme</label>
    <summarizedField>Finanzierungsbaustein__c.Kreditsumme__c</summarizedField>
    <summaryFilterItems>
        <field>Finanzierungsbaustein__c.Art__c</field>
        <operation>notEqual</operation>
        <value>Eigenkapital</value>
    </summaryFilterItems>
    <summaryForeignKey>Finanzierungsbaustein__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>