force-app/main/default/objects/Berechnung__c/fields/LiquidityMonthlyFirstYear__c.field-meta.xml
<CustomField>
    <fullName>LiquidityMonthlyFirstYear__c</fullName>
    <label>Liquidität monatlich 1. Jahr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>