force-app/main/default/objects/Berechnung__c/fields/ListenpreisGesamt__c.field-meta.xml
<CustomField>
    <fullName>ListenpreisGesamt__c</fullName>
    <label>Listenpreis gesamt</label>
    <summarizedField>BerechnungsApartment__c.Listenpreis__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>