force-app/main/default/objects/Berechnung__c/fields/Makler__c.field-meta.xml
<CustomField>
    <fullName>Makler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Makler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Berechnungen (Makler)</relationshipLabel>
    <relationshipName>Berechnungen</relationshipName>
    <type>Lookup</type>
</CustomField>