force-app/main/default/objects/Berechnung__c/fields/MieteProJahrGesamt__c.field-meta.xml
<CustomField>
    <fullName>MieteProJahrGesamt__c</fullName>
    <formula>MieteProMonatGesamt__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Miete pro Jahr gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>