force-app/main/default/objects/Berechnung__c/fields/MieteProMonatGesamt__c.field-meta.xml
<CustomField>
    <fullName>MieteProMonatGesamt__c</fullName>
    <label>Miete pro Monat gesamt</label>
    <summarizedField>BerechnungsApartment__c.MieteProMonatInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>