force-app/main/default/objects/Berechnung__c/fields/MieterEigenaufteilungAnzeigen__c.field-meta.xml
<CustomField>
    <fullName>MieterEigenaufteilungAnzeigen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mieter / Eigenaufteilung anzeigen</label>
    <type>Checkbox</type>
</CustomField>