force-app/main/default/objects/Berechnung__c/fields/Mietsteigerung__c.field-meta.xml
<CustomField>
    <fullName>Mietsteigerung__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Steigerung alle 5 Jahre um 5%</inlineHelpText>
    <label>Mietsteigerung</label>
    <type>Checkbox</type>
</CustomField>