force-app/main/default/objects/Berechnung__c/fields/MonatlichesErgebnisInEuro__c.field-meta.xml
<CustomField>
    <fullName>MonatlichesErgebnisInEuro__c</fullName>
    <formula>MieteProMonatGesamt__c -  VerwaltungProMonatGesamt__c -  InstandhaltungProMonatGesamt__c - ZinsProMonatGesamt__c -  TilgungProMonatGesamt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monatliches Ergebnis in Eur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>