force-app/main/default/objects/Berechnung__c/fields/NebenkostenGesamt__c.field-meta.xml
<CustomField>
    <fullName>NebenkostenGesamt__c</fullName>
    <formula>GrunderwerbsteuerGesamt__c +  NotarUndGerichtskostenGesamt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nebenkosten Gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>