force-app/main/default/objects/Berechnung__c/fields/NotarUndGerichtskostenGesamt__c.field-meta.xml
<CustomField>
    <fullName>NotarUndGerichtskostenGesamt__c</fullName>
    <label>Notar- und Gerichtskosten gesamt</label>
    <summarizedField>BerechnungsApartment__c.NotarUndGerichtskostenInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>