force-app/main/default/objects/Berechnung__c/fields/Pers_nliches_Anschreiben__c.field-meta.xml
<CustomField>
    <fullName>Pers_nliches_Anschreiben__c</fullName>
    <label>Persönliches Anschreiben</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>