force-app/main/default/objects/Berechnung__c/fields/Pers_nliches_Anschreiben_isBlank__c.field-meta.xml
<CustomField>
    <fullName>Pers_nliches_Anschreiben_isBlank__c</fullName>
    <defaultValue>true</defaultValue>
    <description>checks if Persönliches Anschreiben is blank</description>
    <label>Persönliches Anschreiben isBlank</label>
    <type>Checkbox</type>
</CustomField>