force-app/main/default/objects/Berechnung__c/fields/SonderAFABerechnen__c.field-meta.xml
<CustomField>
    <fullName>SonderAFABerechnen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sonder AFA berechnen?</label>
    <type>Checkbox</type>
</CustomField>