force-app/main/default/objects/Berechnung__c/fields/SteigerungInstandhaltung__c.field-meta.xml
<CustomField>
    <fullName>SteigerungInstandhaltung__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Steigerung alle 5 Jahre um 5%</inlineHelpText>
    <label>Steigerung Instandhaltungskosten</label>
    <type>Checkbox</type>
</CustomField>