force-app/main/default/objects/Berechnung__c/fields/SteigerungVerwaltung__c.field-meta.xml
<CustomField>
    <fullName>SteigerungVerwaltung__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Steigerung alle 5 Jahre um 5%</inlineHelpText>
    <label>Steigerung Verwaltungskosten</label>
    <type>Checkbox</type>
</CustomField>