force-app/main/default/objects/Berechnung__c/fields/SteuernBerechnen__c.field-meta.xml
<CustomField>
    <fullName>SteuernBerechnen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Die Berechnung der Steuern ist eine Annäherung</inlineHelpText>
    <label>Steuern berechnen</label>
    <type>Checkbox</type>
</CustomField>