force-app/main/default/objects/Berechnung__c/fields/SubstanzwertGesamt__c.field-meta.xml
<CustomField>
    <fullName>SubstanzwertGesamt__c</fullName>
    <label>Substanzwert gesamt</label>
    <summarizedField>BerechnungsApartment__c.SubstanzwertInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>