force-app/main/default/objects/Berechnung__c/fields/SumPriceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>SumPriceAdjustment__c</fullName>
    <label>Kaufpreisanpassung gesamt</label>
    <summarizedField>BerechnungsApartment__c.PriceAdjustment__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>