force-app/main/default/objects/Berechnung__c/fields/SumPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>SumPurchasePrice__c</fullName>
    <label>Kaufpreis gesamt</label>
    <summarizedField>BerechnungsApartment__c.PurchasePrice__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>