force-app/main/default/objects/Berechnung__c/fields/TaxableIncomePension__c.field-meta.xml
<CustomField>
    <fullName>TaxableIncomePension__c</fullName>
    <label>Zu versteuerndes Einkommen Rente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>