force-app/main/default/objects/Berechnung__c/fields/TilgungProMonatGesamt__c.field-meta.xml
<CustomField>
    <fullName>TilgungProMonatGesamt__c</fullName>
    <label>Tilgung pro Monat gesamt</label>
    <summarizedField>Finanzierungsbaustein__c.TilgungProMonatInEuro__c</summarizedField>
    <summaryForeignKey>Finanzierungsbaustein__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>