force-app/main/default/objects/Berechnung__c/fields/Verkaufsraum__c.field-meta.xml
<CustomField>
    <fullName>Verkaufsraum__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Verkaufsraum</label>
    <referenceTo>Verkaufsraum__c</referenceTo>
    <relationshipLabel>Berechnungen</relationshipLabel>
    <relationshipName>Berechnungen</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>