force-app/main/default/objects/Berechnung__c/fields/VerwaltungProJahrGesamt__c.field-meta.xml
<CustomField>
    <fullName>VerwaltungProJahrGesamt__c</fullName>
    <formula>VerwaltungProMonatGesamt__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verwaltung pro Jahr gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>