force-app/main/default/objects/Berechnung__c/fields/VerwaltungProMonatGesamt__c.field-meta.xml
<CustomField>
    <fullName>VerwaltungProMonatGesamt__c</fullName>
    <label>Verwaltung pro Monat gesamt</label>
    <summarizedField>BerechnungsApartment__c.VerwaltungProMonatInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>