force-app/main/default/objects/Berechnung__c/fields/WechselAufLineareAfaNachJahren__c.field-meta.xml
<CustomField>
    <fullName>WechselAufLineareAfaNachJahren__c</fullName>
    <label>Wechsel auf lineare Afa nach Jahren</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>