force-app/main/default/objects/Berechnung__c/fields/WertAussenanlagenGesamt__c.field-meta.xml
<CustomField>
    <fullName>WertAussenanlagenGesamt__c</fullName>
    <label>Wert Außenanlagen gesamt</label>
    <summarizedField>BerechnungsApartment__c.WertAussenanlagenInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>