force-app/main/default/objects/Berechnung__c/fields/WertGrundstueckGesamt__c.field-meta.xml
<CustomField>
    <fullName>WertGrundstueckGesamt__c</fullName>
    <label>Wert Grundstück gesamt</label>
    <summarizedField>BerechnungsApartment__c.WertGrundstueckInEuro__c</summarizedField>
    <summaryForeignKey>BerechnungsApartment__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>