force-app/main/default/objects/Berechnung__c/fields/Wertsteigerung__c.field-meta.xml
<CustomField>
    <fullName>Wertsteigerung__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Wertsteigerung</label>
    <type>Checkbox</type>
</CustomField>