force-app/main/default/objects/Berechnung__c/fields/ZinsProMonatGesamt__c.field-meta.xml
<CustomField>
    <fullName>ZinsProMonatGesamt__c</fullName>
    <label>Zins pro Monat gesamt</label>
    <summarizedField>Finanzierungsbaustein__c.ZinsProMonatInEuro__c</summarizedField>
    <summaryForeignKey>Finanzierungsbaustein__c.Berechnung__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>