force-app/main/default/objects/Berechnung__c/fields/ZuVersteuerndesEinkommen__c.field-meta.xml
<CustomField>
    <fullName>ZuVersteuerndesEinkommen__c</fullName>
    <label>Zu versteuerndes Einkommen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>