force-app/main/default/objects/Berechnung__c/fields/ZweiterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>ZweiterKaeufer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2. Käufer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Berechnungen (Zweiter Käufer)</relationshipLabel>
    <relationshipName>Berechnungen2</relationshipName>
    <type>Lookup</type>
</CustomField>