force-app/main/default/objects/Berechnung__c/listViews/aktuelle.listView-meta.xml
<ListView>
    <fullName>aktuelle</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Maklerbetreuer__c</columns>
    <columns>Makler__c</columns>
    <columns>Account__c</columns>
    <columns>Hauptimmobilie__c</columns>
    <columns>Gesamtkosten__c</columns>
    <columns>ZuVersteuerndesEinkommen__c</columns>
    <columns>Eigenkapital__c</columns>
    <columns>LiquidityMonthlyFirstYear__c</columns>
    <columns>ErsterKaeufer__c</columns>
    <filterScope>Everything</filterScope>
    <label>aktuelle</label>
</ListView>